# gridex

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: mac-release.yml
linux/: .gitignore  CMakeLists.txt  README.md
linux/resources/: gridex.qrc  style-light.qss  style.qss
linux/src/: main.cpp
linux/src/Domain/: CMakeLists.txt
linux/src/Domain/Repositories/: IConnectionRepository.h
linux/src/Domain/UseCases/Connection/: ConnectDatabase.cpp  ConnectDatabase.h  DeleteConnection.cpp  DeleteConnection.h  TestConnection.cpp  TestConnection.h
linux/src/Presentation/: CMakeLists.txt
linux/src/Presentation/Theme/: ThemeManager.cpp  ThemeManager.h
linux/src/Presentation/ViewModels/: AIChatViewModel.cpp  AIChatViewModel.h  ConnectionListViewModel.cpp  ConnectionListViewModel.h  WorkspaceState.cpp  WorkspaceState.h
linux/src/Presentation/Views/AIChat/: AIChatView.cpp  AIChatView.h
linux/src/Presentation/Views/Backup/: BackupProgressDialog.cpp  BackupProgressDialog.h
linux/src/Presentation/Views/ConnectionForm/: ConnectionFormDialog.cpp  ConnectionFormDialog.h
linux/src/Presentation/Views/CreateTable/: CreateTableDialog.cpp  CreateTableDialog.h
linux/src/Presentation/Views/DataGrid/: DataGridView.cpp  DataGridView.h  QueryResultModel.cpp  QueryResultModel.h
linux/src/Presentation/Views/DatabaseSwitcher/: DatabaseSwitcherDialog.cpp  DatabaseSwitcherDialog.h
linux/src/Presentation/Views/Details/: DetailsPanel.cpp  DetailsPanel.h
linux/src/Presentation/Views/ERDiagram/: ERDiagramExporter.cpp  ERDiagramExporter.h  ERDiagramView.cpp  ERDiagramView.h
linux/src/Presentation/Views/FilterBar/: FilterBarView.cpp  FilterBarView.h
linux/src/Presentation/Views/FunctionDetail/: FunctionDetailView.cpp  FunctionDetailView.h
linux/src/Presentation/Views/Home/: HomeBrandingPanel.cpp  HomeBrandingPanel.h
linux/src/Presentation/Views/ImportSQL/: SqlImportWizard.cpp  SqlImportWizard.h
linux/src/Presentation/Views/MCP/: MCPActivityView.cpp  MCPActivityView.h  MCPAdvancedView.cpp  MCPAdvancedView.h  MCPConnectionsView.cpp  MCPConnectionsView.h  MCPOverviewView.cpp  MCPOverviewView.h  MCPSetupView.cpp  MCPSetupView.h  MCPStyle.h  MCPWindow.cpp  MCPWindow.h  MCPWindowState.cpp  MCPWindowState.h
linux/src/Presentation/Views/Main/: WorkspaceView.cpp  WorkspaceView.h
linux/src/Presentation/Views/MongoDB/: MongoCollectionView.cpp  MongoCollectionView.h
linux/src/Presentation/Views/QueryEditor/: QueryEditorView.cpp  QueryEditorView.h  SqlHighlighter.cpp  SqlHighlighter.h
linux/src/Presentation/Views/QueryEditor/Autocomplete/: AutocompleteProvider.cpp  AutocompleteProvider.h  CompletionModels.h  CompletionPopup.cpp  CompletionPopup.h  SqlContextParser.cpp  SqlContextParser.h
linux/src/Presentation/Views/QueryLog/: QueryLogPanel.cpp  QueryLogPanel.h
linux/src/Presentation/Views/Redis/: RedisKeyDetailView.cpp  RedisKeyDetailView.h
linux/src/Presentation/Views/Settings/: SettingsDialog.cpp  SettingsDialog.h
linux/src/Presentation/Views/Sidebar/: ConnectionRowWidget.cpp  ConnectionRowWidget.h  ConnectionSidebar.cpp  ConnectionSidebar.h  WorkspaceSidebar.cpp  WorkspaceSidebar.h
linux/src/Presentation/Views/StatusBar/: StatusBarView.cpp  StatusBarView.h
linux/src/Presentation/Views/TabBar/: WorkspaceTabBar.cpp  WorkspaceTabBar.h
linux/src/Presentation/Views/TableList/: TableGridView.cpp  TableGridView.h
linux/src/Presentation/Views/TableStructure/: TableStructureView.cpp  TableStructureView.h
linux/src/Presentation/Windows/Main/: MainWindow.cpp  MainWindow.h
linux/tests/: CMakeLists.txt  docker-compose.yml  phase2c-smoketest.cpp  phase2d-smoketest.cpp  sqlite-smoketest.cpp
macos/: AGENTS.md
macos/Resources/: Info.plist
scripts/: build-app.sh  publish.sh  release-all.sh  release.sh  sign-notarize.sh
windows/: README.md
windows/Gridex/: App.xaml.cpp  ClickHouseAdapter.cpp  DataGridView.cpp  DataGridView.h  Gridex.items.props  (+13 more)
(+130 files in other folders)
